--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <title>teste</title>
   </head>
+  <style>
+  body{
+    font-style: Arial;
+    background-color: #777777;
+    }
+  </style>
   <body>
     <<h1>
       hey
